Fix index.html responsive layout
Fix card links alignments, prevented card image from taking too much
real estate. Put a max width on the grid for larger screens. Fixed
title and subtitle layout.

--- a/src/assets/scss/components/_global.scss
+++ b/src/assets/scss/components/_global.scss
@@ -9,6 +9,11 @@ section h1 {
   text-align: center;
 }
 
+.mdl-grid {
+  justify-content: center;
+  max-width: 1200px;
+}
+
 .sr-only {
   position: absolute;
   left: -100%;
